# luafcgid

./: CMakeLists.txt  FindFastCGI.cmake  FindLua.cmake  FindLuaJIT.cmake  Makefile.debian  bootstrap
cmake_debian/: conffiles
debian/: changelog  control  copyright  postinst  postrm  prerm
scripts/etc/init.d/: luafcgid.debian
src/: config.c  main.c  main.h  pool.c  pool.h  request.c
